# reallife

./: 404.html  README.md  auto.py  create_package.sh  index.html  main.py  main__1.py  mkdocs.yml  pyproject.toml  test copy.py  test.py  test_1.py  test_cli.py  update_docs.sh
api_document/: index.html
api_document_/: index.html
docs/: index.md  process_github_repo-issues.md
process_github_repo-issues/: index.html
reallife/: __init__.py  config.yaml  core.py  get_task.py  logic.py  main.py  nodes.py  realLife__1.py  serve.py  server.py  setting__1.py  task_func__1.py  tasks.py  tools.py  utils.py
reallife/action/: action.py  appiotools.py  kanbantools.py  scripts.py  utils.py
reallife/actions/: action.py  status.py  utils.py
reallife/event/: __init__.py  action.py  appiotools.py  kanbantools.py  run_tasks.py  task_action.py  tips.py  utils.py
reallife/script/: complete.py
reallife/scripts/: aifunc.py  applescript.py  pypeteer.py
reallife/status/: action.py  cal.py  info.py  news.py  notes.py  utils.py
reallife/tasks/: task1 copy 2.py  task1 copy 3.py  task1 copy 4.py  task1 copy 5.py  task1 copy 6.py  task1 copy 7.py  task1.py  utils.py
reallife/tools/: manager_canvas.py  meet.py  rag.py
reallife/utils/: llm_utils.py  manager_utils.py  utils.py
reallife2/: get_task.py
script/: add_tips.py  complete.py  pull.py  push.py  receive.py  server.py
search/: search_index.json
test/: test_action.py  test_fake.py  test_script.py
test /: test_ copy 3.py  test_ copy.py  test_ fake.py  test_.py  test_action.py  test_function.py
tests/: test_cli.py  test_logic.py  test_logic2.py  test_other.py
use_case/: index.html
(+38 files in other folders)
