[project]
name = "reallife"
version = "0.1.3"
description = "开始, 便捷使用的代码化"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "grapherz>=0.1.5",
    "kanbanz>=0.2.0",
    "llmada>=0.1.8",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "promptlibz>=0.1.5",
    "pytest>=8.3.5",
    "pytest-html>=4.1.1",
    "pyyaml>=6.0.2",
    "toolsz>=0.1.5",
]

[tool.uv.sources]
promptlibz = { path = "../promptlibz/dist/promptlibz-0.1.5-py3-none-any.whl" }
