[project]
name = "reallife"
version = "0.1.4"
description = "开始, 便捷使用的代码化"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chinese-calendar>=1.10.0",
    "grapherz>=0.1.5",
    "kanbanz>=0.2.0",
    "llmada>=0.1.8",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "promptlibz>=0.2.1",
    "pyppeteer>=2.0.0",
    "pytest>=8.3.5",
    "pytest-html>=4.1.1",
    "pytest-ordering>=0.6",
    "pyyaml>=6.0.2",
    "toolsz>=0.1.5",
]

[tool.setuptools.package-data]
# 告诉 setuptools 在 reallife 包中包含 config/config.yaml
# 注意这里的路径仍然是相对于 reallife 目录的
reallife = ["config.yaml"]