[project]
name = "reallife"
version = "0.1.25"
description = "开始测试"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [ "chinese-calendar>=1.10.0", "grapherz>=0.1.5", "kanbanz>=0.2.0", "llmada>=0.1.8", "numpy>=2.2.5", "pandas>=2.2.3", "promptlibz>=0.2.1", "pyppeteer>=2.0.0", "pytest>=8.3.5", "pytest-html>=4.1.1", "pytest-ordering>=0.6", "pyyaml>=6.0.2", "toml>=0.10.2", "toolsz>=0.1.5",]

[tool.setuptools.package-data]
reallife = [ "config.yaml",]
